--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,14 +1,14 @@
 <%- include("partials/header") %>
 
 <div class="container mb-5">
-	<div class="row m-3">
+	<div class="row my-3">
 		<div class="col-lg-5">
 			<div class="card nb">
 				<img src="<%= data.Poster %>" class="card-img-top">
 			</div>
 		</div>
 		<div class="col-lg-7">
-			<div class="p-3 lsn" style="list-style: none;">
+			<div class="mt-3 mx-3" style="list-style: none;">
 				<li class="py-1"> <strong>Title : </strong> <%= data.Title %> </li>
 				<li class="py-1"> <strong>Released : </strong> <%= data.Released %> </li>
 				<% data.Ratings.forEach(function(rating){ %>
