--- a/views/details.ejs
+++ b/views/details.ejs
@@ -3,7 +3,7 @@
 <div class="container mb-5">
 	<div class="row my-3">
 		<div class="col-lg-5">
-			<div class="card nb">
+			<div class="card" style="border: none">
 				<img src="<%= data.Poster %>" class="card-img-top">
 			</div>
 		</div>
