--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 		<p>Search for a wide range of Movies/TV Shows using any keyword matching its title</p>
 	</div>
 	<h4 class="text-center mb-3">Search for a Movie/TV Show</h4>
-	<form action="/results" method="POST" autocomplete="off">
+	<form action="/results" method="POST" autocomplete="off" style="width: 100%; max-width: 300px; margin: auto">
 		<div class="form-group">
 			<input type="text" name="search" placeholder="Enter some keyword" class="form-control">
 		</div>
