--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,9 +4,18 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Movie API</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<script src="https://kit.fontawesome.com/f0bb2fa622.js" crossorigin="anonymous"></script>		
+	<script src="https://kit.fontawesome.com/f0bb2fa622.js" crossorigin="anonymous"></script>	
+	<style type="text/css">
+		body {
+		    background: #c2e59c;  /* fallback for old browsers */
+		    background: -webkit-linear-gradient(to right, #64b3f4, #c2e59c);  /* Chrome 10-25, Safari 5.1-6 */
+		    background: linear-gradient(to right, #64b3f4, #c2e59c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+		}
+		a:hover {
+		    text-decoration: none !important;
+		}
+	</style>	
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
